# MalRenameStreamlit

./: .gitignore  anime_scraper.py  home.py  pyproject.toml
pages/: 1_Anime_Scraper.py  2_Add_to_qBittorrent.py
