[tool.poetry]
name = "malrenamerstreamlit"
version = "0.1.0"
description = "Mal Stuff"
authors = ["Your Name <you@example.com>"]
license = "none"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
python-dotenv = "^1.0.1"
qbittorrent-api = "^2024.12.71"
streamlit-ace = "^0.1.1"
aiohttp = "^3.11.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
